# coreclr

./: CMakeLists.txt  build.cmd  build.sh  clrdefinitions.cmake  clrfeatures.cmake
src/: CMakeLists.txt
src/ToolBox/SOS/DacTableGen/: MapSymbolProvider.cs
src/ToolBox/SOS/Strike/: strike.cpp
src/debug/daccess/: daccess.cpp  dacdbiimpl.cpp  dacimpl.h  gcinterface.dac.inl  request.cpp  request_svr.cpp
src/debug/ee/: dactable.cpp
src/dlls/mscoree/: mscorwks_unixexports_standalone_gc.src
src/dlls/mscoree/coreclr/: CMakeLists.txt
src/gc/: CMakeLists.txt  gc.cpp  gc.h  gccommon.cpp  gcconfig.cpp  gcconfig.def  gcconfig.h  gcee.cpp  gcenv.ee.standalone.inl  gcevent.h  gcevent_serializers.h  gcevents.h  gceventstatus.h  gchandletable.cpp  gcimpl.h  gcinterface.dac.h  gcinterface.dac.inl  gcinterface.ee.h  gcinterface.h  gcpriv.h  gcscan.cpp  gcscan.h  handletable.cpp  handletablecore.cpp  handletablepriv.h  handletablescan.cpp  objecthandle.cpp  objecthandle.h
src/gc/env/: common.h  gcenv.base.h  gcenv.ee.h  gcenv.h  gcenv.object.h  gcenv.os.h  gcenv.structs.h  gcenv.sync.h  volatile.h
src/gc/sample/: GCSample.cpp  gcenv.ee.cpp  gcenv.h
src/gc/unix/: configure.cmake  events.cpp  gcenv.unix.cpp
src/gc/windows/: gcenv.windows.cpp
src/inc/: clrconfigvalues.h  daccess.h  dacvars.h
src/jit/: simd.cpp
src/strongname/api/: common.h
src/vm/: CMakeLists.txt  appdomain.cpp  appdomain.hpp  ceemain.cpp  class.h  common.h  comutilnative.cpp  corhost.cpp  eeconfig.cpp  eeconfig.h  eventtrace.cpp  finalizerthread.cpp  gcenv.ee.cpp  gcenv.ee.h  gcenv.os.cpp  gchandleutilities.h  gcheaputilities.cpp  gcheaputilities.h  gchelpers.cpp  gchost.cpp  gcstress.h  gctoclreventsink.cpp  gctoclreventsink.h  jithelpers.cpp  marshalnative.cpp  methodtable.cpp  object.cpp  proftoeeinterfaceimpl.cpp  rejit.cpp  rejit.inl  runtimehandles.cpp  stubhelpers.cpp  threads.cpp  threads.h  vars.hpp  weakreferencenative.cpp
src/vm/i386/: jitinterfacex86.cpp
tests/: runtest.sh  testsFailingOutsideWindows.txt
